# xid_device_library

./: .gitignore  .gitmodules  CMakeLists.txt  CedrusPresentationDriver.sln  Doxyfile  README.md  annotated.html  classes.html  files.html  functions.html  functions_enum.html  functions_eval.html  functions_func.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  globals_vars.html  hierarchy.html  index.html  main.html  namespacemembers.html  namespacemembers_enum.html  namespacemembers_eval.html  namespacemembers_func.html  namespaces.html  tree.html
AutomatedTesting/: TestKeypressPackets.cpp
CedrusXidDriver/: CedrusXidActiveDevice.cpp  CedrusXidActiveDevice.h  CedrusXidDeviceEnumerator.cpp  CedrusXidDeviceEnumerator.h  CedrusXidDeviceEnumerator.rgs  CedrusXidDriver.cpp  CedrusXidDriver.idl  CedrusXidDriver.rc  CedrusXidDriver.vcxproj  CedrusXidDriverPS.vcxproj  CedrusXidResponseDevice.cpp  CedrusXidResponseDevice.h  CedrusXidResponseDevice.rgs  dllmain.cpp  dllmain.h  gui_console.cpp  gui_console.h  resource.h
Presentation XID Extension Installer/: Presentation XID Extension Installer.vdproj
PresentationExtension/: CedrusPresentationDriver.sln
PresentationXIDExtensionInstaller/: CedrusPresentationXIDExtension.wxs  README_steps_for_wix.txt  dlls_to_include.wxs  run_heat.bat
SCons_build/: SConscript.CedrusXidDriver  SConscript.TestXidLib  SConscript.st_tester  SConscript.xid_device_driver  SConscript.xid_device_library  SConstruct  build.bat  build.sh  libftd2xx.1.2.2.dylib
Tests/: xid_commands.py
XidLibSample/: XidLibSample.sln
(+259 files in other folders)
